update units to work better

--- a/src/styles.css
+++ b/src/styles.css
@@ -90,8 +90,8 @@ top:-20px;
     margin: auto;
     text-align: center;
   }
-  .last-updated {
-    color: #c7c7c7;
+ .last-updated {
+    color: #969696;
   }
   .card {
     display: block;
